Teerex (13/Feb/02)
-----------------

Additions:
 + Decreased vertex count on pyramid object.

Bug fixes:
 + Fixed a bug where range circles were missing their last segment,
   at least on my machine.
 + Fixed normals on pyramid object for better lighing.

Andon (12/Feb/02)
-----------------

Additions:
 + Added NEW objects for the object spawn type on the map..
   It's a Pyramid or square, depending on your map seetings.

Additions (teerex):
 + Added support for 0x05 TCP/UDP packet (self health update).

Bug Fixes:
 + Fixed a bug that was causing object spawns to be marked
   as "stale" due to the fact that no position updates were
   being received for them.
 + Fixed a Signal 11 (SIGSEGV - Segmentation Fault) caused
   by assuming ds was always initialized.. A recent patch
   has caused us to have to re-evaluate those criteria.
   
Bug Fixes (teerex):
 + Removed double coding for stale check and moved to checkStale().
   Decreased the stale range to 10,000 for all mobs/players/items.
 + Fixed major bug in experimental code for mob loc projection that
   was ganking things out of the list.


SnowBlind (11/Feb/02)
---------------------
Additions:
	+ Added Sticky mob list option in misc prefs tab
	  (this option tries to keep the selected mob
	  visible)

Druppy (11/Feb/02)
------------------
Additions:
	+ Added a RegExp Filter at the top of the map

Druppy (10/Feb/02)
------------------
Additions:
	+ Added Distance Field in the Mob List
	+ Added an option to enable Color-Coding
	  spawns based on thier con in the mob list.
	  This feature is toggable via 
	  Prefs->Misc->EnableMobListColors

Andon (10/Feb/02)
------------------
Additions (SnowBlind):
 + Added a command line option to turn on packet captures
   not defaults to not making one if you dont add the
   --capture option

Additions:
 + Added support for object spawns..  These include things
   such as:  Graves, Realm Banners, and other misc. spawns.
