@@ -4,10 +4,15 @@ Teerex (13/Feb/02)
 Additions:
  + Decreased vertex count on pyramid object.
 
+Additions (Andon):
+ + Optimized some of the code in exPacket.. Providing some
+   preliminary support for non-32-bit platforms.
+
 Bug fixes:
  + Fixed a bug where range circles were missing their last segment,
    at least on my machine.
  + Fixed normals on pyramid object for better lighing.
+
 
 Andon (12/Feb/02)
 -----------------
